--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "target": "ES2015",
     "module": "CommonJS",
+    "lib": [
+      "ESNext",
+    ],
     "sourceMap": true,
     "rootDir": "./src/",
     "outDir": "./out/",
