--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/thzt/tiny-language#readme",
   "devDependencies": {
+    "@types/node": "^14.14.21",
     "mocha": "^8.2.1",
     "typescript": "^4.1.3"
   }
